--- a/css/contact-us.css
+++ b/css/contact-us.css
@@ -272,7 +272,7 @@ p {
   align-items: center;
 }
 /* Mobile */
-@media (min-width: 425px) {
+@media (min-width: 320px) and (max-width: 700px) {
   .background-img {
     width: 500px;
   }
@@ -466,7 +466,7 @@ p {
 
 
 /* Laptop */
-@media (min-width: 1024px) {
+@media (min-width: 701px) and (max-width: 2559px)  {
 .content{
   display: flex;
   flex-direction: column;
@@ -654,7 +654,7 @@ p {
 
 
 /* Desktop (2K) */
-@media (min-width: 2560px) {
+@media (min-width: 2560px) and (max-width: 3000px) {
 .content{
   display: flex;
   flex-direction: column;
