--- a/css/contact-us.css
+++ b/css/contact-us.css
@@ -250,21 +250,24 @@ button:active{
   background: linear-gradient(to top, black, transparent);
   padding: 20px 20px;
   border-top: 1px solid rgba(255, 255, 255, 0.1);
-}
-
-.footer p {
-  opacity: 0.6;
-  font-size: 12px;
-  letter-spacing: 1px;
-}
-
-.footer {
+  position: fixed;
   bottom: 0;
   left: 0;
   width: 100%;
   background-color: black;
   z-index: 100;
 }
+
+.footer p {
+  opacity: 0.6;
+  font-size: 12px;
+  letter-spacing: 1px;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 p {
   color: white;
   display: flex;
@@ -447,25 +450,6 @@ p {
   justify-content: center;
   align-items: center;
 }
-.line-img{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: nowrap;
-  overflow: hidden;
-  margin-top: 0;
-  margin-bottom: 50px;
-}
-
-.line-img img{
-  transform: scaleX(1);
-  width: 40%;
-  height: 50px;
-  max-height: 50px;
-  object-fit: cover;
-  opacity: 0.9;
-  z-index: 1000;
-}
 }
 
 
@@ -638,25 +622,6 @@ p {
   justify-content: center;
   align-items: center;
 }
-.line-img{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: nowrap;
-  overflow: hidden;
-  margin-top: 0;
-  margin-bottom: 50px;
-}
-
-.line-img img{
-  transform: scaleX(1);
-  width: 40%;
-  height: 50px;
-  max-height: 50px;
-  object-fit: cover;
-  opacity: 0.9;
-  z-index: 1000;
-}
 }
 
 
@@ -825,24 +790,5 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
-}
-.line-img{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: nowrap;
-  overflow: hidden;
-  margin-top: 0;
-  margin-bottom: 200px;
-}
-
-.line-img img{
-  transform: scaleX(1);
-  width: 100%;
-  height: 100px;
-  max-height: 50px;
-  object-fit: cover;
-  opacity: 0.9;
-  z-index: 1000;
 }
 }
