--- a/css/home-body.css
+++ b/css/home-body.css
@@ -107,6 +107,7 @@
   font-size: 14px;
   font-family: Orbitron, sans-serif;
   position: absolute;
+  text-align: center;
   top: 65%;
   left: 50%;
   border-style: solid;
