--- a/css/home-header.css
+++ b/css/home-header.css
@@ -278,7 +278,7 @@
 /* Desktop */
 @media (min-width: 1024px) and (max-width: 1919px) {
   .header-nav{
-    padding: 20px 0;
+    padding: 18px 0;
   }
 
   .header-logo {
@@ -311,8 +311,11 @@
 
 /* Desktop */
 @media (min-width: 1920px) and (max-width: 2559px) {
+  .header-nav{
+    padding: 23px 0;
+  }
   .header-logo {
-    width: 200px; 
+    width: 180px; 
   }
 
   .left-logo {
@@ -321,12 +324,12 @@
 
   .center-nav {
     gap: 40px;
-    font-size: 30px;
+    font-size: 25px;
   }
 
   .right-nav {
-    font-size: 28px;
-    padding: 10px 25px;
+    font-size: 25px;
+    padding: 10px 20px;
     right: 30px;
   }
   
