--- a/css/game.css
+++ b/css/game.css
@@ -83,7 +83,7 @@ body {
 .content-paragraph {
   width: 35%;
   text-align: center;
-  color: #ffaa46;
+  color: #ffba69; 
   font-size: 32px;
   font-weight: bold;
   font-family: Inter, sans-serif;
@@ -111,8 +111,8 @@ body {
 .main-paragraph {
   font-size: 45px;
   width: 70%;
-  font-family: Inter, sans-serif;
   line-height: 1.5;
+  font-family: Orbitron, sans-serif;
 }
 
 .main-paragraph p {
@@ -262,12 +262,12 @@ body {
 
   .content-header {
     width: 85%;
-    font-size: 32px;
+    font-size: 30px;
   }
 
   .content-paragraph {
     width: 85%;
-    font-size: 20px;
+    font-size: 18px;
     margin-top: 15px;
   }
 
@@ -370,12 +370,12 @@ body {
 
   .content-header {
     width: 65%;
-    font-size: 42px;
+    font-size: 50px;
   }
 
   .content-paragraph {
-    width: 55%;
-    font-size: 26px;
+    width: 65%;
+    font-size: 22px;
   }
 
   .main-content {
@@ -461,13 +461,13 @@ body {
   }
 
   .content-header {
-    width: 50%;
-    font-size: 48px;
+    width: 75%;
+    font-size: 60px;
   }
 
   .content-paragraph {
-    width: 45%;
-    font-size: 32px;
+    width: 70%;
+    font-size: 25px;
   }
 
   .about {
@@ -548,13 +548,13 @@ body {
   }
 
   .content-header {
-    width: 48%;
-    font-size: 58px;
+    width: 70%;
+    font-size: 100px;
   }
 
   .content-paragraph {
-    width: 38%;
-    font-size: 38px;
+    width: 60%;
+    font-size: 40px;
   }
 
   .about {
@@ -635,13 +635,13 @@ body {
   }
 
   .content-header {
-    width: 45%;
-    font-size: 68px;
+    width: 70%;
+    font-size: 150px;
   }
 
   .content-paragraph {
-    width: 35%;
-    font-size: 42px;
+    width: 60%;
+    font-size: 55px;
   }
 
   .about {
